--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,6 @@
+<!-- Github pages need the index file in main folder while flask need the index file in the templates folder -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,7 +11,7 @@
     <title>Flask Project</title>
     <link rel="stylesheet" href="style.css">
 </head>
-    
+
 <body>
     <p>
     <h2><b> Hello users!</b></h2>
@@ -145,5 +148,4 @@
             id</a> </h3>
     </p>
 </body>
-
 </html>
